--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,59 @@
-.App {
+body{
+  background-color: #123;
+  color: #fff;
+}
+main{
+  width: 300px;
+  margin: 50px auto 0;
+  
+}
+
+div.board{
+  margin-top: 150px;
+  display: grid;
+  border: solid 2px #fff;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
+}
+
+div.square{
+  width: 100px;
+  height: 100px;
+  border: 2px solid #fff;
+  box-sizing: border-box;
+  font-size: 4rem;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+div.result{
+  font-size: 2rem;
+  margin-top: 10px;
+  text-align: center;
+
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+div.result.green{
+  background-color: green;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+
+div.result.red{
+  background-color: red;
+}
+
+.start__btn{
+  font-size:32px;
+  color: #fff;
+  border: none;
+  margin-top: 40px;
+  background: rgb(36, 58, 80);
+  border: 2px solid white;
+}
+.start__btn:hover{
+  background: rgb(158, 158, 158);
+  transition: all 0.5s;
+}
+.button{
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  text-align: center;
 }
